[package]
name = "cat-loggr"
version = "1.0.2"
edition = "2021"
license = "MIT"
description = "A simple, lightweight utility for making beautiful logs"
documentation = "https://docs.rs/cat-loggr"
readme = "README.md"
homepage = "https://github.com/Sven65/cat-loggr-rs/"
repository = "https://github.com/Sven65/cat-loggr-rs/"
keywords = ["logs", "console"]
categories = ["command-line-interface", "development-tools::debugging"]
exclude = ["tests/", "images/", ".*"]

[dependencies]
owo-colors = "3.5.0"
lazy_static = "1.4.0"
chrono = "0.4.22"

[dev-dependencies]
test-case = "2.2.1"

[features]
default = ["macros"]
macros = []

[package.metadata.docs.rs]
features = ["default", "macros"]
rustdoc-args = ["--cfg", "docsrs"]